Add create new question feature

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,9 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous" />
+    <style>
+      body { padding-bottom: 70px; }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-inverse">
@@ -18,8 +21,17 @@
         </div>
       </div>
     </nav>
-    <div id="root">
-
+    <div class"row">
+      <div class="col-md-8 col-md-offset-2">
+        <h1>Manage Questions</h1>
+        <hr>
+        <button class="btn btn-primary"> Add New Question </button>
+        <div id="root">
+          <!--
+            React App Components to render here...
+          -->
+        </div>
+      </div>
     </div>
 
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
