Add routing functionality

--- a/client/index.html
+++ b/client/index.html
@@ -9,31 +9,20 @@
           crossorigin="anonymous" />
     <style>
       body { padding-bottom: 70px; }
+      .activeNav {
+        color: #fff !important;
+        background-color: #080808 !important;
+      }
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            QuizMaster
-          </a>
-        </div>
-      </div>
-    </nav>
-    <div class"row">
-      <div class="col-md-8 col-md-offset-2">
-        <h1>Manage Questions</h1>
-        <hr>
-        <div id="root">
-          <!--
-            React App Components to render here...
-          -->
-        </div>
-      </div>
+    <div id="root">
+        <!--
+          React App Components to render here...
+        -->
     </div>
 
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
             crossorigin="anonymous"></script>
